--- a/style.css
+++ b/style.css
@@ -1,5 +1,63 @@
-.deneme{
-	height:300px;
-	width:500px;
-	background-color: yellow;
+.duzelt {
+  clear:both;
+}    
+#ortala {
+  margin: 0 auto;
+  width:800px;
+}
+#header {
+  margin-top:-10px;
+  margin-left:-10px;
+  margin-right: -10px;
+  background-color: #000;
+  height: 50px;
+  color: #FFF;
+}
+#left {
+  margin-top: 10px;
+  width: 615px;
+  float: left;
+}
+#right {
+  margin-top:10px;
+  float: right;
+  width: 185px;
+}
+#slider {
+  background-color: #000;
+  height: 100px;
+  color: #FFF;
+  width: 610px;
+}
+.icerik {
+  float: left;
+  margin-top: 10px;
+  background: #000;
+  margin-right: 5px;
+  height: 100px;
+  width: 200px;
+  color: #FFF;
+}
+.konu {
+  margin-top: 10px;
+  width: 610px;
+  height: 150px;
+  background-color: #000;
+  color: #FFF;
+}
+.widgets {
+  margin-bottom: 10px;
+  background: #000;
+  height: 150px;
+  width: 175px;
+  color: #FFF;
+}
+#footer {
+  margin-top: 100px;
+  margin-bottom: -10px;
+  margin-left: -10px;
+  margin-right: -10px;
+  background-color: #000;
+  height: 50px;
+  color: #FFF;
 }
