--- a/style.css
+++ b/style.css
@@ -1,63 +1,166 @@
-.duzelt {
-  clear:both;
-}    
-#ortala {
-  margin: 0 auto;
-  width:800px;
+* {
+     margin: 0px;
+     padding: 0px 
 }
-#header {
-  margin-top:-10px;
-  margin-left:-10px;
-  margin-right: -10px;
-  background-color: #000;
-  height: 50px;
-  color: #FFF;
+ #main-container {
+     width: 100%;
+     margin: 0px auto;
 }
-#left {
-  margin-top: 10px;
-  width: 615px;
+ #header {
+     width: 100%;
+     background-color: black;
+     padding: 10px;
+     color: white;
+}
+ #header:after {
+     content: ".";
+     display: block;
+     height: 0;
+     clear: both;
+     visibility: hidden;
+}
+ #header section {
+     float: left;
+     width: 20%;
+     font-size: 18px;
+     font-weight: bold;
+}
+ #header nav {
+     width: 50%;
+     float: left;
+}
+ #header nav ul {
+     list-style: none;
+}
+ #header nav ul li {
+     float: left;
+     min-width: 10%;
+     padding: 4px;
+     margin-left: 10px;
+     background-color: #fdf1e5;
+     text-align: center;
+     color: black;
+}
+ #header nav ul li a, a {
+     text-decoration: none;
+}
+ #main-body-container {
+     padding: 10px;
+     margin: 10px;
+  }
+ #main-body-container:after {
+     content: ".";
+     display: block;
+     height: 0;
+     clear: both;
+     visibility: hidden;
+}
+ #display-ads{
+     padding: 20px;
+     margin: 20px;
+     background: #e5e5e5;
+}
+ #main-article {
+     float: left;
+     width: 60%;
+     min-height: 450px;
+     background: #e5e5e5;
+}
+ #sidebar {
+     float: right;
+     width: 38%;
+     min-height: 450px;
+     background: #e5e5e5;
+}
+ #footer {
+     width: 100%;
+     background-color: black;
+     padding: 10px;
+     color: white;
+}
+{
+  box-sizing: border-box;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
   float: left;
+  width: 16.66%;
 }
-#right {
-  margin-top:10px;
-  float: right;
-  width: 185px;
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
 }
-#slider {
-  background-color: #000;
-  height: 100px;
-  color: #FFF;
-  width: 610px;
-}
-.icerik {
-  float: left;
-  margin-top: 10px;
-  background: #000;
-  margin-right: 5px;
-  height: 100px;
-  width: 200px;
-  color: #FFF;
-}
-.konu {
-  margin-top: 10px;
-  width: 610px;
-  height: 150px;
-  background-color: #000;
-  color: #FFF;
-}
-.widgets {
-  margin-bottom: 10px;
-  background: #000;
-  height: 150px;
-  width: 175px;
-  color: #FFF;
-}
-#footer {
-  margin-top: 100px;
-  margin-bottom: -10px;
-  margin-left: -10px;
-  margin-right: -10px;
-  background-color: #000;
-  height: 50px;
-  color: #FFF;
+
+.active,
+.demo:hover {
+  opacity: 1;
 }
