--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
+  width: 50%;
+  height: 50%;
 }
 
 /* Number text (1/3 etc) */
@@ -147,6 +149,8 @@
   content: "";
   display: table;
   clear: both;
+  width: 50%;
+  height: 50%;
 }
 
 /* Six columns side by side */
@@ -162,5 +166,7 @@
 
 .active,
 .demo:hover {
+  width: 50%;
+  height: 50%;
   opacity: 1;
 }
