--- a/style.css
+++ b/style.css
@@ -1,172 +1,110 @@
-* {
-     margin: 0px;
-     padding: 0px 
+@charset "iso-8859-9";
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	background-image: url(images/bg.png);
 }
- #main-container {
-     width: 100%;
-     margin: 0px auto;
+#anakapsayici {
+	height: auto;
+	width: 960px;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-bottom: 10px;
+	margin-left: auto;
+	padding-top: 10px;
 }
- #header {
-     width: 100%;
-     background-color: black;
-     padding: 10px;
-     color: white;
-}
- #header:after {
-     content: ".";
-     display: block;
-     height: 0;
-     clear: both;
-     visibility: hidden;
-}
- #header section {
-     float: left;
-     width: 20%;
-     font-size: 18px;
-     font-weight: bold;
-}
- #header nav {
-     width: 50%;
-     float: left;
-}
- #header nav ul {
-     list-style: none;
-}
- #header nav ul li {
-     float: left;
-     min-width: 10%;
-     padding: 4px;
-     margin-left: 10px;
-     background-color: #fdf1e5;
-     text-align: center;
-     color: black;
-}
- #header nav ul li a, a {
-     text-decoration: none;
-}
- #main-body-container {
-     padding: 10px;
-     margin: 10px;
-  }
- #main-body-container:after {
-     content: ".";
-     display: block;
-     height: 0;
-     clear: both;
-     visibility: hidden;
-}
- #display-ads{
-     padding: 20px;
-     margin: 20px;
-     background: #e5e5e5;
-}
- #main-article {
-     float: left;
-     width: 60%;
-     min-height: 450px;
-     background: #e5e5e5;
-}
- #sidebar {
-     float: right;
-     width: 38%;
-     min-height: 450px;
-     background: #e5e5e5;
-}
- #footer {
-     width: 100%;
-     background-color: black;
-     padding: 10px;
-     color: white;
-}
-{
-  box-sizing: border-box;
+#menu {
+	height: 35px;
+	width: 900px;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: #CF0;
+	margin-top: 0px;
 }
 
-/* Position the image container (needed to position the left and right arrows) */
-.container {
-  position: relative;
+.kutuicerik {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 12px;
+	text-align: justify;
+}
+#banner {
+	height: 74px;
+	width: 900px;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-bottom: 0px;
+	margin-left: auto;
+	padding: 0px;
+	background-image: url(images/logo.png);
+	border: 1px dashed #CCC;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+#icerik {
+	font-family: "Courier New", Courier, monospace;
+	font-size: 12px;
+	color: #00F;
+	height: 335px;
+	width: 900px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
+#kutu_alani {
+	background-color: #edecec;
+	height: 200px;
+	width: 900px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
+#kutu1 {
+	height: 170px;
+	width: 258px;
+	margin-top: 5px;
+	margin-right: 0px;
+	margin-bottom: 5px;
+	margin-left: 15px;
+	float: left;
+	background-image: url(images/kutu_bg.png);
+	padding: 10px;
+	border: 1px dashed #CCC;
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+#kutu2 {
+	float: left;
+	height: 170px;
+	width: 258px;
+	margin-top: 5px;
+	margin-right: 15px;
+	margin-bottom: 5px;
+	margin-left: 15px;
+	background-image: url(images/kutu_bg.png);
+	padding: 10px;
+	border: 1px dashed #CCC;
 }
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  width: 50%;
-  height: 50%;
+#kutu3 {
+	float: right;
+	height: 170px;
+	width: 258px;
+	margin-top: 5px;
+	margin-right: 15px;
+	margin-bottom: 5px;
+	margin-left: 0px;
+	background-image: url(images/kutu_bg.png);
+	padding: 10px;
+	border: 1px dashed #CCC;
 }
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+#temizleyici {
+	clear: both;
 }
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-  width: 50%;
-  height: 50%;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  width: 50%;
-  height: 50%;
-  opacity: 1;
+#footer {
+	background-color: #f7f7f7;
+	height: 30px;
+	width: 900px;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: center;
+	margin-bottom: 10px;
 }
